--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @keyframes spin{
+@keyframes spin{
     from{
         transform: rotate(0deg);
     }
@@ -15,4 +15,4 @@
 }
 .spin{
     animation: spin 40s linear infinite;
-} */
+}
